test/good/automatic/extension/mixed/without_input/ret_zero/0008.lat
class Y extends X { int a; }
class X { int b; }

void a() {
	(new Y[3])[1] = (Y) null;
}
int main() {
  a();
	return 0;
}
