test/bad/automatic/extension/class/compile_time/0010.lat
class janusz {
  int andrzej;
}

class zygmunt extends janusz {
  int andrzej;
}

int main() {
  return 1;
}
